# typeC

./: CMakeLists.txt  README.md  cable.cpp  cable.h  common.h  identity.cpp  identity.h  partner.cpp  partner.h  plug.cpp  port.cpp  port.h  sysfs.cpp  sysfs.h  sysfsvalue.h  typeC.cpp  typeC.h  utils.cpp  utils.h
files/conf/: type-c.conf
src/: atrributes.h  main.cpp  manager.cpp  manager.h
src/bus/typec/: altmode.cpp  altmode.h
src/bus/typec/displayport/: displayport.cpp  displayport.h
src/class/typec/: cable.cpp  cable.h  common.h  identity.cpp  identity.h  partner.cpp  partner.h  plug.cpp  plug.h  port.cpp  port.h
src/class/usb_power_delivery/: power_delivery.cpp  power_delivery.h  sink_battery.cpp  sink_battery.h  sink_fixed_supply.cpp  sink_fixed_supply.h  sink_pps.cpp  sink_pps.h  sink_variable_supply.cpp  sink_variable_supply.h  source_battery.cpp  source_battery.h  source_fixed_supply.cpp  source_fixed_supply.h  source_pps.cpp  source_pps.h  source_variable_supply.cpp  source_variable_supply.h
src/handler/: device_handler.cpp  device_handler.h
src/udev/: udev_event.cpp  udev_event.h  udev_listener.cpp  udev_listener.h
src/utils/: configuration.cpp  configuration.h  singleton.h  sysfs.cpp  sysfs.h  sysfsvalue.h  utils.cpp  utils.h
sys/bus/typec/devices/: port0
sys/bus/typec/devices/1-1/: description  vdo
sys/bus/typec/devices/1-1/mode1/: svid
sys/bus/typec/devices/1-1/mode1/displayport/: configuration  pin_assignment
sys/class/typec/: port0
sys/class/typec/port0/: port_type
sys/class/typec/port0/port0-cable/: plug_type
sys/class/typec/port0/usb_power_delivery/sink_capabilitie/3:battery/: minimum_voltage
sys/class/typec/port0/usb_power_delivery/sink_capabilitie/4:pps/: maximum_current
sys/class/typec/port0/usb_power_delivery/sink_capabilities/4:pps/: minimum_voltage
sys/class/typec/port0/usb_power_delivery/source_capabilities/1:fixed_supply/: operational_current
sys/devices/platform/rtk_typec/typec/port0/: power_role
sys/devices/platform/rtk_typec/typec/port0/usb_power_delivery/sink_capabilities/2:variable_supply/: maximum_voltage
sys/devices/platform/rtk_typec/typec/port0/usb_power_delivery/source_capabilities/3:battery/: maximum_power
